<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">flocal</string>
    <string name="signUp">Sign Up</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="comments">Comments</string>
    <string name="peeps">Peeps</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="me">Me</string>
    <string name="reportBug">Report Bug</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="reportUser">Report User</string>
    <string name="reportPost">Report Post</string>
    <string name="reportComment">Report Comment</string>
    <string name="searchHandle">search handle&#8230;</string>
    <string name="enterLocation">enter a location&#8230;</string>
    <string name="newSegment">NEW</string>
    <string name="hotSegment">HOT</string>
    <string name="addedSegment">ADDED</string>
    <string name="writePostHint">What\'s going on?</string>
    <string name="writePostFullHint">Post for the peeps around you&#8230; (tag others with @theirHandle)</string>
    <string name="noPostsNew">No posts found :( Be the first ↑</string>
    <string name="noPosts">No posts found :( Go to the new section to write your own!</string>
    <string name="writeReplyHint">write a comment&#8230;</string>
    <string name="writeReplyFullHint">write a comment&#8230; (tag others or respond to repliers with @theirHandle)</string>
    <string name="noReplies">No comments yet. Be the first!</string>
    <string name="orderedSegment">ORDERED</string>
    <string name="topSegment">TOP</string>
    <string name="newestSegment">NEWEST</string>
    <string name="menu">menu</string>
    <string name="notifications">Notifications</string>
    <string name="settings">settings</string>
    <string name="notification">notification</string>
    <string name="reply">reply</string>
    <string name="tagged">tagged</string>
    <string name="upvote">upvote</string>
    <string name="downvote">downvote</string>
    <string name="added">added</string>
    <string name="chat">chat</string>
    <string name="chatUpper">Chat</string>
    <string name="noSearchResults">No peeps found :(</string>
    <string name="noNotifications">You do not have any notifications.</string>
    <string name="noContent">no content</string>
    <string name="logout">Log Out</string>
    <string name="chooseCamera">Take a Photo</string>
    <string name="chooseFrontCamera">Take a Selfie!</string>
    <string name="chooseLibrary">Choose from Photo Library</string>
    <string name="error">An error occurred</string>
    <string name="loading">loading&#8230;</string>
    <string name="tapProfilePic">Tap To Add Profile Pic</string>
    <string name="handleNo">This handle is available!</string>
    <string name="handleYes">Sorry, this handle is unavailable.</string>
    <string name="handleSpecial">Only a-z, A-Z, . and _ are allowed.</string>
    <string name="handleInternet">Could not connect to internet/server.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="location">Location</string>
    <string name="myLocation">My Location</string>
    <string name="handle">Handle</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="enterRegisteredEmail">Please enter your registered email.</string>
    <string name="x">X</string>
    <string name="title">title</string>
    <string name="backgroundPic">backgroundPic</string>
    <string name="tapToAddBackground">Tap To Add Background Pic</string>
    <string name="profilePic">profilePic</string>
    <string name="points">points</string>
    <string name="followers">followers</string>
    <string name="description">description</string>
    <string name="privateInfo">Private Info</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthday</string>
    <string name="edit">edit&#8230;</string>
    <string name="characterCount">/255</string>
    <string name="editHandle">Change Handle</string>
    <string name="editDescription">/dit Description</string>
    <string name="editName">Change Name</string>
    <string name="editPhone">Change Phone</string>
    <string name="editBirthday">Change Birthday</string>
    <string name="editPost">Edit Post</string>
    <string name="editReply">Edit Comment</string>
    <string name="editLogin">Edit Login</string>
    <string name="currentEmail">Current Email</string>
    <string name="currentPassword">Current Pass</string>
    <string name="newEmail">New Email</string>
    <string name="newPassword">New Pass</string>
    <string name="authenticateText">Please re-enter your current login info above. If you only want to change one field below, leave the other blank.</string>
    <string name="noChatList">You do not have any chats. Start a conversation by going to someones profile!</string>
    <string name="info">info</string>
    <string name="noChat">No messages yet.</string>
    <string name="sendMessage">send a message&#8230;</string>
    <string name="typing">&#8230;</string>
    <string name="camera">camera</string>
    <string name="send">send</string>
    <string name="timestamp">timestamp</string>
    <string name="imagePic">imagePic</string>
    <string name="video">video</string>
    <string name="play">play</string>
    <string name="reportPostReason">Report Reason</string>
    <string name="reportUserReason">User Report Reason</string>
    <string name="details">details&#8230;</string>
    <string name="sendReport">Send Report</string>
    <string name="locals">Locals</string>
    <string name="addedCap">Added</string>
    <string name="followersCap">Followers</string>
    <string name="noUserPosts">This user has no posts.</string>
    <string name="noUserInfo">We encountered an error and can\'t load this user. Please report this bug.</string>
    <string name="blocked">This user has blocked you.</string>
    <string name="leaveFeedback">Leave us some feedback or suggestions!</string>
    <string name="feedbackHint">Type feedback here&#8230;</string>
    <string name="reportBugReason">Bug Report Reason</string>
    <string name="cc">Creative Commons</string>
    <string name="attribution">
        The following icons fall under Creative Commons and were all downloaded from thenounproject.com (The Noun Project):
        \n\nLocation, Play, by Adrien Coquet
        \nPeople Group, by Aliwijaya
        \nProfile, by Anath
        \nHeart, by andriwidodo
        \nMore, by Aya Sofya
        \nHome Location, by BomSymbols
        \nCheck Mark, by Egidio Filippetti
        \nChat (flipped horizontal), Send, by Gregor Cresnar
        \nFire, by HLD
        \nSign Up, by IconDots
        \nCamera, Chat (flipped horizontal), Search, by i cons
        \nPencil (combined with Clock), by iconsphere
        \nKey, by il Capitano
        \nEye Mask (combined with RSS), by Jems Mayor
        \nTag, by Jony
        \nClock (combined with Pencil), by Kidiladon
        \nSquircle, by Luuk Lamers
        \nAdd Person, by MFRA
        \nSettings, by unlimicon
        \nHappy Face, by Mooms
        \nDown Arrow, Up Arrow, by mikicon
        \nMenu, Reply, by Numero Uno
        \nCancel, Reply, by Pawel Glen
        \nDead, by Rodolfo Alvarez
        \nUpload Photos, by Ryan Beck
        \nQuestion Mark, by Tinashe Mugayi
        \nUser, by Victor Akio Zukeran
        \n\nAdditionally, all icons were modified by filling with color. A link to the Creative Commons license is provided below.

        \n\nThe following sounds fall under Creative Commons Attribution:
        \n\npop_drip, from rcptones.com (dev_tones)
        \n\nFrom freesound.org:
        \nUI Completed Status Alert Notification SFX001.wav, by Headphaze
        \nCamera Shutter, Fast, A.wav, by InspectorJ
        \nbeepbeep.wav, by leviclaassen
        \nConfirmation Downward, by original_sound
        \nLevel Up 01, by rhodesmas
    </string>
    <string name="license" tools:ignore="TypographyOther">
        android-Action-Sheet is available under the MIT License. Copyright (c) 2014 baoyongzhang
        \nandroid-segemented-control is available under the MIT License. Copyright (c) 2014 Le Van Hoang

        \n\nThe MIT License (MIT)
        \n\nPermission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:

        \n\nThe above copyright notice and this permission notice shall be included in all
        copies or substantial portions of the Software.

        \n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE.

        \n\n\n\nsquare/picasso, square/OkHttp, hdodenhof/CircleImageView, are available under the Apache license:

        \n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at

        \n\nhttp://www.apache.org/licenses/LICENSE-2.0

        \n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
</resources>