<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settings_s"
        android:icon="@drawable/settings_s"
        android:orderInCategory="100"
        android:title="@string/settings"
        android:visible="false"/>
    <item
        android:id="@+id/settings_teal_s"
        android:icon="@drawable/settings_teal_s"
        android:orderInCategory="101"
        android:title="@string/settings"
        android:visible="false"/>
    <item
        android:id="@+id/settings_yellow_s"
        android:icon="@drawable/settings_yellow_s"
        android:orderInCategory="103"
        android:title="@string/settings"
        android:visible="false"/>

    <item
        android:id="@+id/notification_s"
        android:icon="@drawable/notification_s"
        android:orderInCategory="104"
        android:title="@string/notification"
        android:visible="false"/>
    <item
        android:id="@+id/notification_blue_grey_s"
        android:icon="@drawable/notification_blue_grey_s"
        android:orderInCategory="105"
        android:title="@string/notification"
        android:visible="false"/>
    <item
        android:id="@+id/notification_blue_s"
        android:icon="@drawable/notification_blue_s"
        android:orderInCategory="106"
        android:title="@string/notification"
        android:visible="false"/>
    <item
        android:id="@+id/notification_green_s"
        android:icon="@drawable/notification_green_s"
        android:orderInCategory="107"
        android:title="@string/notification"
        android:visible="false"/>
    <item
        android:id="@+id/notification_orange_s"
        android:icon="@drawable/notification_orange_s"
        android:orderInCategory="108"
        android:title="@string/notification"
        android:visible="false"/>
    <item
        android:id="@+id/notification_purple_s"
        android:icon="@drawable/notification_purple_s"
        android:orderInCategory="109"
        android:title="@string/notification"
        android:visible="false"/>
    <item
        android:id="@+id/notification_red_s"
        android:icon="@drawable/notification_red_s"
        android:orderInCategory="110"
        android:title="@string/notification"
        android:visible="false"/>
    <item
        android:id="@+id/notification_teal_s"
        android:icon="@drawable/notification_teal_s"
        android:orderInCategory="111"
        android:title="@string/notification"
        android:visible="false"/>
    <item
        android:id="@+id/notification_yellow_s"
        android:icon="@drawable/notification_yellow_s"
        android:orderInCategory="112"
        android:title="@string/notification"
        android:visible="false"/>

    <item
        android:id="@+id/upvote_s"
        android:icon="@drawable/upvote_s"
        android:orderInCategory="113"
        android:title="@string/upvote"
        android:visible="false"/>
    <item
        android:id="@+id/reply_s"
        android:icon="@drawable/reply_s"
        android:orderInCategory="114"
        android:title="@string/reply"
        android:visible="false"/>
    <item
        android:id="@+id/tagged_s"
        android:icon="@drawable/tagged_s"
        android:orderInCategory="115"
        android:title="@string/tagged"
        android:visible="false"/>
    <item
        android:id="@+id/chat_s"
        android:icon="@drawable/chat_s"
        android:orderInCategory="116"
        android:title="@string/chat"
        android:visible="false"/>
    <item
        android:id="@+id/add_s"
        android:icon="@drawable/add_s"
        android:orderInCategory="117"
        android:title="@string/notification"
        android:visible="false"/>
</menu>