<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/postPicImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/imagePic"
        android:focusable="true"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/black" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/writePostFullHint"
        android:inputType="textMultiLine"
        android:maxLength="255"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postPicImageView" />

    <ImageView
        android:id="@+id/playImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/play"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="@+id/postPicImageView"
        app:layout_constraintStart_toStartOf="@+id/postPicImageView"
        app:layout_constraintTop_toTopOf="@+id/postPicImageView"
        app:srcCompat="@drawable/play_s" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp"
        android:text="@android:string/cancel"
        android:textColor="@color/flocalColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ImageView
        android:id="@+id/sendImageView"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/send"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/cancelButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancelButton"
        app:srcCompat="@drawable/send_s" />

    <ImageView
        android:id="@+id/cameraImageView"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/camera"
        app:layout_constraintBottom_toBottomOf="@+id/cancelButton"
        app:layout_constraintStart_toEndOf="@+id/cancelButton"
        app:layout_constraintTop_toTopOf="@+id/cancelButton"
        app:srcCompat="@drawable/camera_s" />

    <TextView
        android:id="@+id/characterCounTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/characterCount"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/cameraImageView"
        app:layout_constraintEnd_toStartOf="@+id/sendImageView"
        app:layout_constraintStart_toEndOf="@+id/cameraImageView"
        app:layout_constraintTop_toTopOf="@+id/cameraImageView" />

</android.support.constraint.ConstraintLayout>