<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/postImageCardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/imagePicImageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:background="@android:color/black"
            android:clickable="true"
            android:contentDescription="@string/imagePic"
            android:focusable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePicImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagePicImageView" />

        <TextView
            android:id="@+id/handleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/handle"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/profilePicImageView"
            app:layout_constraintTop_toTopOf="@+id/profilePicImageView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/noContent"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/pointsTextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePicImageView" />

        <TextView
            android:id="@+id/timestampTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/timestamp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/replyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/reply"
            app:layout_constraintBottom_toBottomOf="@+id/timestampTextView"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/timestampTextView"
            app:layout_constraintTop_toTopOf="@+id/timestampTextView" />

        <TextView
            android:id="@+id/pointsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/points"
            android:textColor="@color/flocalColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/downvoteImageView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upvoteImageView"
            tools:layout_editor_absoluteY="50dp" />

        <ImageView
            android:id="@+id/upvoteImageView"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="0dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/upvote"
            app:layout_constraintBottom_toTopOf="@+id/pointsTextView"
            app:layout_constraintEnd_toEndOf="@+id/pointsTextView"
            app:layout_constraintStart_toStartOf="@+id/pointsTextView"
            app:layout_constraintTop_toTopOf="@+id/profilePicImageView"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/upvote" />

        <ImageView
            android:id="@+id/downvoteImageView"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/downvote"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/pointsTextView"
            app:layout_constraintStart_toStartOf="@+id/pointsTextView"
            app:layout_constraintTop_toBottomOf="@+id/pointsTextView"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/downvote" />

        <ImageView
            android:id="@+id/playImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/play"
            app:layout_constraintBottom_toBottomOf="@+id/imagePicImageView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imagePicImageView"
            app:srcCompat="@drawable/play_s" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>